- Enhanced the description of "Snake VS" to include additional features. - Added new software applications: nfo2go, Forecast, SpiroGen, BTC Track, GENE, Double Pendulum, Larry, GetForecast, vBTC, Bmon, GetWeather CLI, UPDate Tool, and rc, each with unique descriptions and categories. - Updated the description of "Conway's Game of Life" to highlight new features.

--- a/index.html
+++ b/index.html
@@ -247,23 +247,107 @@
                 {
                     "@type": "SoftwareApplication",
                     "name": "Snake VS",
-                    "description": "A multiplayer & AI snake game with Battle Royale mode",
+                    "description": "A multiplayer & AI snake game with Battle Royale mode. Features VS AI, 2 Player mode, and Battle Royale with 5 AI opponents with unique behaviors.",
                     "url": "https://kreft.us/snake/",
                     "applicationCategory": "Game"
                 },
                 {
+                    "@type": "SoftwareApplication",
+                    "name": "nfo2go",
+                    "description": "Personal AI information hub with customizable location-based briefings using Google Gemini API. Features weather support and offline data retention.",
+                    "url": "https://kreft.us/nfo/",
+                    "applicationCategory": "ProductivityApplication"
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "Forecast",
+                    "description": "Web version of the Terminal app 'GetForecast'. Comprehensive weather utility using National Weather Service API with current conditions, forecasts, alerts, and multiple display modes.",
+                    "url": "https://kreft.us/forecast/",
+                    "applicationCategory": "WeatherApplication"
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "SpiroGen",
+                    "description": "Digital spirograph art generator with multi-node support, pan/zoom, persistent traces, and export capabilities for GIF or PNG images.",
+                    "url": "https://kreft.us/spiro/",
+                    "applicationCategory": "DesignApplication"
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "BTC Track",
+                    "description": "Bitcoin price tracking and portfolio monitoring with AI market insights, charts, and PWA support.",
+                    "url": "https://kreft.us/btc/",
+                    "applicationCategory": "FinanceApplication"
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "GENE",
+                    "description": "Evolving digital life simulation with genetic algorithms and interactive controls for tweaking world balance and viewing genomic history.",
+                    "url": "https://kreft.us/gene/",
+                    "applicationCategory": "Simulation"
+                },
+                {
                     "@type": "SoftwareApplication", 
                     "name": "Conway's Game of Life",
-                    "description": "Interactive cellular automaton simulation",
+                    "description": "Interactive cellular automaton simulation with pattern selection, wrapped/infinite modes, speed control, pan & zoom, and colorful cell aging.",
                     "url": "https://kreft.us/gol/",
                     "applicationCategory": "Simulation"
                 },
                 {
                     "@type": "SoftwareApplication",
-                    "name": "BTC Track",
-                    "description": "Bitcoin price tracking and portfolio monitoring",
-                    "url": "https://kreft.us/btc/",
-                    "applicationCategory": "Finance"
+                    "name": "Double Pendulum",
+                    "description": "Physics-based chaotic motion simulator with customizable parameters, real-time trace visualization, and image export capabilities.",
+                    "url": "https://kreft.us/pendulum/",
+                    "applicationCategory": "Simulation"
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "Larry",
+                    "description": "Terminal-based Frogger-like game written in Go with persistent Top-10 scoreboard, multiple levels, and color themes.",
+                    "url": "https://kreft.us/larry/",
+                    "applicationCategory": "Game"
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "GetForecast",
+                    "description": "PowerShell script for detailed weather information using National Weather Service API. Features geocoding, temperature trends, wind gusts, and interactive display modes.",
+                    "url": "https://kreft.us/gf/",
+                    "applicationCategory": "WeatherApplication"
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "vBTC",
+                    "description": "Command-line Bitcoin trading simulator with real-time market data, virtual portfolio management, transaction ledger, and 1-Hour SMA analysis.",
+                    "url": "https://kreft.us/vbtc/",
+                    "applicationCategory": "BitcoinGame"
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "Bmon",
+                    "description": "Lightweight real-time Bitcoin price monitor with multiple modes, visual sparkline charts, audible alerts, and currency conversion. Available in Go and PowerShell.",
+                    "url": "https://kreft.us/bmon/",
+                    "applicationCategory": "FinanceApplication"
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "GetWeather CLI",
+                    "description": "Command-line utility for retrieving weather information using OpenWeatherMap API. Available as PowerShell script and native Go application.",
+                    "url": "https://kreft.us/gw/",
+                    "applicationCategory": "WeatherApplication"
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "UPDate Tool",
+                    "description": "Interactive PowerShell command-line tool for managing and executing file update jobs with color-coded output and multiple job selection capabilities.",
+                    "url": "https://kreft.us/upd/",
+                    "applicationCategory": "UtilityApplication"
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "rc (Run Continuously)",
+                    "description": "Command-line utility that executes commands in a loop with precision timing. Available in native Go and PowerShell versions.",
+                    "url": "https://kreft.us/rc/",
+                    "applicationCategory": "UtilityApplication"
                 }
             ]
         }
