Update Forecast Icons: Replace icon files for improved visual consistency and quality. Updated references in index.html and forecast/index.html to use new light-themed icons, while removing outdated icon files.

--- a/forecast/index.html
+++ b/forecast/index.html
@@ -8,13 +8,13 @@
     <title>Forecast</title>
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/style.css?v=3">
-    <link rel="icon" type="image/png" href="icons/icon-192.png">
+    <link rel="icon" type="image/png" href="icons/light-icon-192.png">
 </head>
 <body>
     <header>
         <div class="header-left">
             <h1>
-                <img src="icons/Light-icon-192.png" alt="Forecast Icon" class="header-icon">
+                <img src="icons/light-icon-192.png" alt="Forecast Icon" class="header-icon">
                 Forecast
             </h1>
         </div>
