Add favorites / locations functionality with UI updates
- Introduced favorite and locations buttons in the control bar for enhanced user interaction.
- Implemented a locations drawer to display favorite locations, allowing users to quickly access them.
- Updated CSS styles for the new buttons and drawer, ensuring a cohesive design.
- Enhanced JavaScript logic to manage favorites, including toggling favorites and rendering location buttons dynamically.
- Updated weather data loading logic to support last viewed locations and improve user experience.

--- a/forecast/index.html
+++ b/forecast/index.html
@@ -38,12 +38,19 @@
 
         <!-- Control Bar -->
         <section class="control-bar">
+            <button id="favoriteBtn" class="btn btn-secondary favorite-btn">⭐️</button>
+            <button id="locationsBtn" class="btn btn-secondary locations-btn">🌎Locations ▾</button>
             <button id="refreshBtn" class="btn btn-secondary">Refresh</button>
             <label class="toggle-label">
                 <input type="checkbox" id="autoUpdateToggle" checked>
                 <span>Auto-Update</span>
             </label>
             <span id="lastUpdate" class="last-update"></span>
+        </section>
+
+        <!-- Locations Drawer -->
+        <section id="locationsDrawer" class="locations-drawer hidden">
+            <div id="locationButtons" class="location-buttons"></div>
         </section>
 
         <!-- Loading Indicator -->
