Enhance forecast text visibility and layout adjustments
- Updated the HTML structure to wrap the forecast title in a span for better styling control.
- Added CSS classes to manage the visibility of the forecast text based on the width of the input field, improving responsiveness.
- Implemented a JavaScript function to dynamically show or hide the forecast text using ResizeObserver, ensuring a cleaner UI on various screen sizes.

--- a/forecast/index.html
+++ b/forecast/index.html
@@ -15,7 +15,7 @@
         <div class="header-left">
             <h1>
                 <img src="icons/light-icon-192.png" alt="Forecast Icon" class="header-icon">
-                Forecast
+                <span class="forecast-text">Forecast</span>
             </h1>
         </div>
         <div class="header-right">
