Update forecast application description and features in index.html

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 {
                     "@type": "SoftwareApplication",
                     "name": "Forecast",
-                    "description": "Web version of the Terminal app 'GetForecast'. Comprehensive weather utility using National Weather Service API with current conditions, forecasts, alerts, and multiple display modes.",
+                    "description": "Web version of the Terminal app 'GetForecast'. Comprehensive weather utility using National Weather Service API with current conditions, forecasts, alerts, and multiple display modes. Features favorites saving, custom location names, locations drawer, auto-update, and PWA support with offline capabilities.",
                     "url": "https://kreft.us/forecast/",
                     "applicationCategory": "WeatherApplication"
                 },
@@ -405,7 +405,7 @@
                         <a href="./forecast/" tabindex="-1">
                             <div>
                                 <h2>Forecast</h2>
-                                <p><b>Forecast</b> - Web version of the Terminal app 'GetForecast'. Comprehensive weather utility using National Weather Service API. Features include current conditions, hourly and daily forecasts, weather alerts, and multiple display modes (Full, Daily, Hourly, Rain, Wind, History). No API registration required.</p>
+                                <p><b>Forecast</b> - Web version of the Terminal app 'GetForecast'. Comprehensive weather utility using National Weather Service API. Features include current conditions, hourly and daily forecasts, weather alerts, and multiple display modes (Full, Daily, Hourly, Rain, Wind, History). <b>Favorites:</b> Save favorite locations with the star button for quick access. <b>Locations Drawer:</b> Access all saved locations from the Locations button. <b>Custom Names:</b> Double-click any location button in the drawer to edit and assign custom names. <b>Auto-Update:</b> Automatic weather refresh every 10 minutes. <b>PWA:</b> Installable Progressive Web App with offline support and location-specific caching. Fully responsive design for mobile and desktop. No API registration required.</p>
                             </div>
                         </a>
                     </td>
