Add BTC tracking application and enhance PowerShell script functionality
- Introduced a new SoftwareApplication entry for the BTC CLI tool in index.html, detailing its features and providing a link.
- Updated the PowerShell script (btc.ps1) to version 2.2, adding new metrics such as 1H SMA, 24H high/low, volatility, and historical data visualization.
- Implemented a helper function for fetching historical data and generating a sparkline for visual representation of price trends.
- Removed outdated README file for BTC v2.0, streamlining documentation for the latest version.

--- a/index.html
+++ b/index.html
@@ -330,6 +330,13 @@
                 },
                 {
                     "@type": "SoftwareApplication",
+                    "name": "BTC",
+                    "description": "CLI version of BTC Track. PowerShell script for Bitcoin price tracking and portfolio monitoring with real-time data, historical metrics, profit/loss calculation, and CSV logging.",
+                    "url": "https://kreft.us/psbtc/",
+                    "applicationCategory": "FinanceApplication"
+                },
+                {
+                    "@type": "SoftwareApplication",
                     "name": "GetWeather CLI",
                     "description": "Command-line utility for retrieving weather information using OpenWeatherMap API. Available as PowerShell script and native Go application.",
                     "url": "https://kreft.us/gw/",
@@ -547,6 +554,21 @@
                             <div>
                                 <h2>Bmon v1.5</h2>
                                 <p><b>Bmon</b> is a lightweight, real-time Bitcoin price monitor that runs in the command line. It features multiple monitoring modes, including an interactive mode with start/pause functionality, a 5-minute quick-glance mode (-go), and a 24-hour long-duration single-line mode (-golong). Features include a visual sparkline chart showing price trends, audible price-change alerts, and on-demand currency conversions (BTC ↔ USD ↔ Satoshis). Available in both Go and PowerShell versions, providing cross-platform compatibility and native performance.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
+                <tr class="project-row" onclick="window.location.href='./psbtc/';">
+                    <td class="project-image-cell">
+                        <a href="./psbtc/" tabindex="-1">
+                            <img src="./images/btc_ps.jpg" alt="PowerShell BTC Bitcoin tracker terminal interface showing market data and portfolio" loading="lazy">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./psbtc/" tabindex="-1">
+                            <div>
+                                <h2>BTC v2.2</h2>
+                                <p><b>BTC</b> is the CLI version of BTC Track, a PowerShell script for Bitcoin price tracking and portfolio monitoring. It retrieves real-time and historical Bitcoin data from the LiveCoinWatch API, displaying current price, 24-hour changes, 1H SMA, 24H high/low, volatility, volume, market cap, and a history sparkline visualization. Features include portfolio tracking with profit/loss calculation, CSV logging, interactive first-run setup, and configurable settings via btc.ini. The script uses color-coded output to indicate price movements and includes verbose mode for detailed operational messages.</p>
                             </div>
                         </a>
                     </td>
