Update model name and cache version in index.html and sw.js
- Changed the model name from "gemini-2.5-flash-lite-preview-06-17" to "gemini-2.5-flash" in index.html and test/index.html for consistency.
- Updated CACHE_NAME in sw.js to reflect the new versioning format.

--- a/btc/test/index.html
+++ b/btc/test/index.html
@@ -786,7 +786,7 @@
 
             // Using gemini-2.5-flash as a robust choice for a recent Flash model.
             // Verify with ListModels if a more specific identifier like "gemini-1.5-flash-preview-0520" is needed and available.
-            const modelName = "gemini-2.5-flash-preview-05-20"; 
+            const modelName = "gemini-2.5-flash"; 
             const GEMINI_API_URL = `https://generativelanguage.googleapis.com/v1beta/models/${modelName}:generateContent?key=${config.googleApiKey}`;            const prompt = "What is happening in Bitcoin today, Cover main headlines, with summaries. Length 400 words or less";
 
             console.log(`[DEBUG] Attempting to fetch insight. Model: ${modelName}, API Key used: ${config.googleApiKey ? 'Yes' : 'No'}`);
