--- a/btc/index.html
+++ b/btc/index.html
@@ -1210,7 +1210,7 @@
             if(insightModalHeaderLogoEl) insightModalHeaderLogoEl.classList.add('is-pulsing');
 
 
-            const modelName = "gemini-2.5-flash-lite-preview-06-17"; 
+            const modelName = "gemini-2.5-flash"; 
             const GEMINI_API_URL = `https://generativelanguage.googleapis.com/v1beta/models/${modelName}:generateContent?key=${config.googleApiKey}`;            
             const prompt = "What is happening in Bitcoin today, Cover main headlines, with summaries. Length 350-500 words, ensure output is formatted with markdown";
 
