--- a/ps/pipe/index.html
+++ b/ps/pipe/index.html
@@ -233,12 +233,13 @@
                                     <li>Aligned output formatting for easy reading</li>
                                     <li>Automatic data parsing from HTML tables</li>
                                     <li>Enhanced statistics: Current level, 12H/24H/72H SMA, and 12H/24H/72H High/Low</li>
-                                    <li>Command-line arguments for selective output (banner, level, SMA, High/Low lines, sparklines)</li>
+                                    <li>100% Duration tracking: Displays how long the pipe has been at full capacity (only shown when at 100%)</li>
+                                    <li>Command-line arguments for selective output (banner, level, capacity, SMA, High/Low lines, sparklines)</li>
                                     <li>Each percentage value individually color-coded for intuitive visual representation</li>
                                 </ul>
                             </p>
                             <p>
-                                The script displays comprehensive statistics including current level, 12H/24H/72H simple moving averages (SMA), and 12H/24H/72H high/low values. Each percentage value is individually color-coded, and sparkline glyphs change color based on their fill level, providing an intuitive visual representation of the Big Pipe system status. Use command-line arguments to display specific output lines for scripting and automation.
+                                The script displays comprehensive statistics including current level, 12H/24H/72H simple moving averages (SMA), and 12H/24H/72H high/low values. When the pipe reaches 100% capacity, it also displays the duration it has been at full capacity. Each percentage value is individually color-coded, and sparkline glyphs change color based on their fill level, providing an intuitive visual representation of the Big Pipe system status. Use command-line arguments to display specific output lines for scripting and automation.
                             </p>
                             <p>
                                 <b>Official Website:</b> <a href="https://www.portland.gov/bes/big-pipe-tracker" target="_blank" rel="noopener noreferrer">Portland Big Pipe Tracker</a>
