--- a/nfo/index.html
+++ b/nfo/index.html
@@ -51,19 +51,52 @@
             <h2>Application Configuration</h2>
             <div id="appConfigError" class="error-message"></div>
             <div>
-                <label for="apiKey">Gemini API Key:</label><div class="api-key-wrapper">
-                    <input type="password" id="apiKey" name="apiKey" class="api-key-input">
-                    <span id="geminiApiKeyStatus" class="api-key-status"></span>
-                </div>
-                <small id="getApiKeyLinkContainer" class="hidden">
-                    <a href="https://aistudio.google.com/app/apikey" target="_blank">Get Gemini Key for Free</a>
-                </small>
+                <label for="activeProvider">AI Provider:</label>
+                <select id="activeProvider" name="activeProvider" style="padding: 8px; margin: 5px 0 10px 0; border: 1px solid var(--input-border-color); background-color: var(--input-bg-color); color: var(--text-color); border-radius: 4px; width: 100%; box-sizing: border-box;">
+                    <option value="google">Google (Gemini)</option>
+                    <option value="openrouter">OpenRouter</option>
+                </select>
             </div>
-            <div>
-                <label for="rpmLimit">Rate per Minute (Gemini):</label>
-                <input type="number" id="rpmLimit" name="rpmLimit" min="1" value="10" class="rpm-input">
-                <small>Default: 10 (Free tier, no CC Saved)</small>
-                <small style="display: block; margin-top: -5px; margin-bottom: 5px;">Note: Adding CC info to your Google account increases free limit to 1000.</small>
+            <!-- Google Provider Settings -->
+            <div id="googleProviderSettings">
+                <div>
+                    <label for="apiKey">Gemini API Key:</label><div class="api-key-wrapper">
+                        <input type="password" id="apiKey" name="apiKey" class="api-key-input">
+                        <span id="geminiApiKeyStatus" class="api-key-status"></span>
+                    </div>
+                    <small id="getApiKeyLinkContainer" class="hidden">
+                        <a href="https://aistudio.google.com/app/apikey" target="_blank">Get Gemini Key for Free</a>
+                    </small>
+                </div>
+                <div>
+                    <label for="rpmLimit">Rate per Minute (Gemini):</label>
+                    <input type="number" id="rpmLimit" name="rpmLimit" min="1" value="10" class="rpm-input">
+                    <small>Default: 10 (Free tier, no CC Saved)</small>
+                    <small style="display: block; margin-top: -5px; margin-bottom: 5px;">Note: Adding CC info to your Google account increases free limit to 1000.</small>
+                </div>
+            </div>
+            <!-- OpenRouter Provider Settings -->
+            <div id="openRouterProviderSettings" class="hidden">
+                <div>
+                    <label for="openRouterApiKey">OpenRouter API Key:</label><div class="api-key-wrapper">
+                        <input type="password" id="openRouterApiKey" name="openRouterApiKey" class="api-key-input">
+                        <span id="openRouterApiKeyStatus" class="api-key-status"></span>
+                    </div>
+                    <small id="getOpenRouterApiKeyLinkContainer" class="hidden">
+                        <a href="https://openrouter.ai/keys" target="_blank">Get OpenRouter API Key</a>
+                    </small>
+                </div>
+                <div>
+                    <label for="openRouterModel">Model:</label>
+                    <select id="openRouterModel" name="openRouterModel" style="padding: 8px; margin: 5px 0 10px 0; border: 1px solid var(--input-border-color); background-color: var(--input-bg-color); color: var(--text-color); border-radius: 4px; width: 100%; box-sizing: border-box;">
+                        <option value="">Select Model...</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="openRouterRpmLimit">Rate per Minute (OpenRouter):</label>
+                    <input type="number" id="openRouterRpmLimit" name="openRouterRpmLimit" min="1" value="10" class="rpm-input">
+                    <small>Default: 10</small>
+                </div>
             </div>
             <div>
                 <label for="owmApiKey">OpenWeatherMap API Key:</label><div class="api-key-wrapper">
