Update nfo2Go to version 3.0 with multi-provider support and enhanced configuration
- Upgraded project version from 2.0 to 3.0, reflecting significant updates.
- Introduced support for multiple AI providers, including Google Gemini and OpenRouter, allowing users to select their preferred API.
- Enhanced configuration options for API keys and model selections, ensuring a more flexible user experience.
- Updated documentation to reflect changes in functionality and provider integration.
- Improved UI elements to accommodate new provider settings and ensure seamless user interaction.

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 {
                     "@type": "SoftwareApplication",
                     "name": "nfo2go",
-                    "description": "Personal AI information hub with customizable location-based briefings using Google Gemini API. Features weather support and offline data retention.",
+                    "description": "Personal AI information hub with customizable location-based briefings. Supports Google Gemini and OpenRouter APIs with dynamic model selection. Features weather support and offline data retention.",
                     "url": "https://kreft.us/nfo/",
                     "applicationCategory": "ProductivityApplication"
                 },
@@ -396,8 +396,8 @@
                     <td class="project-text-cell">
                         <a href="./nfo/" tabindex="-1">
                             <div>
-                                <h2>nfo2go v.2</h2>
-                                <p><b>nfo2Go:</b> Personal AI info hub. Now with weather support. <br><strong>Use:</strong> <br>1. App Config: Add Gemini API Key (get one free from Google AI Studio, link in app) &amp; set your theme colors. <br>2. Manage Info Locations: Add (e.g., 'Home' for 'Portland, OR'). Also drag to re-order. <br>3. Info Structure: Add topics &amp; AI queries (e.g., 🌤️Weather:'Current Weather conditions with 3 day forecast'). To build a personalised info source.<br>4. Click location to view; data retained for offline use.</p>
+                                <h2>nfo2go v.3</h2>
+                                <p><b>nfo2Go:</b> Personal AI info hub with multi-provider support. Now supports both Google Gemini and OpenRouter APIs. <br><strong>Use:</strong> <br>1. App Config: Select AI Provider (Google Gemini or OpenRouter). Add API Key (get Google Gemini key free from Google AI Studio, or OpenRouter key from OpenRouter - links in app). For OpenRouter, select from hundreds of available models (free models highlighted). Set RPM limits and theme colors. <br>2. Manage Info Locations: Add (e.g., 'Home' for 'Portland, OR'). Also drag to re-order. <br>3. Info Structure: Add topics &amp; AI queries (e.g., 🌤️Weather:'Current Weather conditions with 3 day forecast'). To build a personalised info source.<br>4. Click location to view; data retained for offline use.</p>
                             </div>
                         </a>
                     </td>
