Add NOAA tide station support and distance calculation
- Implemented functions to calculate distance between coordinates using the Haversine formula.
- Added functionality to fetch nearby NOAA tide stations based on user coordinates, including support checks for water levels.
- Enhanced weather data fetching to include NOAA station information if available.
- Updated display functions to show NOAA station details and resources in the UI, improving user experience with relevant tide information.

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                         <a href="./gf/" tabindex="-1">
                             <div>
                                 <h2>GetForecast</h2>
-                                <p><b>GetForecast</b> is a PowerShell script that retrieves and displays detailed weather information for a specified location using the National Weather Service API. It accepts US zip codes or "City, State" strings, and provides current conditions, hourly forecasts, daily forecasts, weather alerts, and more with smart color-coding and interactive display modes. Features include geocoding via OpenStreetMap Nominatim API, temperature trend detection, wind gust information, dew point calculations, and an interactive mode with keyboard controls. No API registration required.</p>
+                                <p><b>GetForecast</b> is a PowerShell script that retrieves and displays detailed weather information for a specified location using the National Weather Service API. It accepts US zip codes or "City, State" strings, and provides current conditions, hourly forecasts, daily forecasts, weather alerts, and more with smart color-coding and interactive display modes. Features include geocoding via OpenStreetMap Nominatim API, temperature trend detection, wind gust information, dew point calculations, and an interactive mode with keyboard controls. When a NOAA tide station is found within 100 miles, displays NOAA Station information with clickable links to tide predictions, datums, and water level data. No API registration required.</p>
                             </div>
                         </a>
                     </td>
